<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/dp_280"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_fill_white_6"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/warming_tips"
            android:textColor="@color/text_color_1"
            android:textSize="@dimen/sp_17" />

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/tips_new_version"
            android:textColor="@color/text_color_2"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:id="@+id/llayoutIgnoreVer"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivIgnoreVer"
                android:layout_width="@dimen/dp_14"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp_4"
                android:contentDescription="@string/image_descripe"
                android:src="@mipmap/ic_check_no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ignore_this_version"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/text_color_2"
                android:textSize="@dimen/sp_16"
                android:visibility="gone" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:background="@color/app_line" />

            <TextView
                android:id="@+id/tvConfirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/download_now"
                android:textColor="@color/app_blue"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>