<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg2"
    android:orientation="vertical">

    <View
        android:id="@+id/vStatusBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:background="@color/app_bg" />

    <include layout="@layout/layout_titlebar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/tips_common_question1"
        android:textColor="@color/text_color_3"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="left"
        android:hint="@string/hint_common_question"
        android:maxLength="100"
        android:minHeight="@dimen/dp_200"
        android:padding="@dimen/dp_10"
        android:textColor="@color/text_color_2"
        android:textColorHint="@color/text_color_3"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/tips_common_question2"
        android:textColor="@color/text_color_3"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:hint="@string/input_mobile"
        android:inputType="number"
        android:maxLength="11"
        android:padding="@dimen/dp_10"
        android:textColor="@color/text_color_2"
        android:textColorHint="@color/text_color_3"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:id="@+id/tvCommit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/shape_corner_gradient_light_blue"
        android:gravity="center"
        android:text="@string/submit_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/changeIp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/shape_corner_gradient_light_blue"
        android:gravity="center"
        android:text="修改域名"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

</LinearLayout>