<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_225"
        android:contentDescription="@string/image_descripe"
        android:scaleType="fitXY"
        android:src="@color/app_red" />

    <View
        android:id="@+id/vStatusBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_44"
        android:layout_below="@+id/vStatusBar"
        android:contentDescription="@string/image_descripe"
        android:paddingLeft="@dimen/dp_12"
        android:paddingTop="@dimen/dp_12"
        android:paddingRight="@dimen/dp_28"
        android:paddingBottom="@dimen/dp_12"
        android:src="@mipmap/ic_back_w" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_44"
        android:layout_below="@+id/vStatusBar"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/cal_repament"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_17" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivBack"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/principal_money"
                android:textColor="@color/colorfdfdfd"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tvCapital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="0.00"
                android:textColor="@color/colorfdfdfd"
                android:textSize="@dimen/sp_20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:text="@string/principal_rat"
                android:textColor="@color/colorfdfdfd"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tvInterest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:text="0.00"
                android:textColor="@color/colorfdfdfd"
                android:textSize="@dimen/sp_20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:text="@string/repament_total"
                android:textColor="@color/colorfdfdfd"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tvTotalSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:text="0.00"
                android:textColor="@color/colorfdfdfd"
                android:textSize="@dimen/sp_20" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@drawable/bg_fill_white_8"
                android:paddingLeft="26dp"
                android:paddingTop="30dp"
                android:paddingRight="26dp"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="借款金额"
                    android:textColor="@color/text_color_2"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:text="¥"
                    android:textColor="@color/text_color_2"
                    android:textSize="23sp" />

                <EditText
                    android:id="@+id/etAdvanceAmount"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@null"
                    android:hint="@string/hint_repament_money"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@color/text_color_2"
                    android:textColorHint="@color/text_color_4"
                    android:textSize="@dimen/sp_20" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_below="@+id/etAdvanceAmount"
                    android:background="@color/app_line" />

                <LinearLayout
                    android:id="@+id/llayoutAdvanceTime"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    android:layout_below="@+id/etAdvanceAmount"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/borrow_time"
                        android:textColor="@color/text_color_2"
                        android:textSize="@dimen/sp_16" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tvAdvanceTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_10"
                        android:text="@string/choice_time"
                        android:textColor="#79797b"
                        android:textSize="@dimen/sp_13" />

                    <ImageView
                        android:layout_width="@dimen/dp_6"
                        android:layout_height="@dimen/dp_11"
                        android:contentDescription="@string/image_descripe"
                        android:src="@mipmap/ic_into" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_below="@+id/llayoutAdvanceTime"
                    android:background="@color/app_line" />

                <LinearLayout
                    android:id="@+id/llayoutAdvanceInterest"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    android:layout_below="@+id/llayoutAdvanceTime"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/borrowing_rat_month"
                        android:textColor="@color/text_color_2"
                        android:textSize="@dimen/sp_16" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/etAdvanceInterest"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="right"
                        android:hint="@string/input_rat"
                        android:inputType="numberDecimal"
                        android:maxLength="8"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingRight="@dimen/dp_10"
                        android:textColor="@color/text_color_2"
                        android:textColorHint="@color/text_color_4"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="%"
                        android:textColor="@color/text_color_2"
                        android:textSize="@dimen/sp_16" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_below="@+id/llayoutAdvanceInterest"
                    android:background="@color/app_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llayoutAdvanceInterest"
                    android:layout_marginTop="27dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAverageCapital"
                        android:layout_width="130dp"
                        android:layout_height="44dp"
                        android:background="@drawable/bg_fill_blue_60"
                        android:gravity="center"
                        android:text="@string/average_capital"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tvAverageCapitalPlusInterest"
                        android:layout_width="130dp"
                        android:layout_height="44dp"
                        android:background="@drawable/bg_border_blue_60"
                        android:gravity="center"
                        android:text="@string/average_capital_plus_interest"
                        android:textColor="@color/app_blue"
                        android:textSize="@dimen/sp_16" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_fill_white_8"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingTop="@dimen/dp_20"
                android:paddingRight="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/periods"
                        android:textColor="@color/text_color_8"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/capital"
                        android:textColor="@color/text_color_8"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rat"
                        android:textColor="@color/text_color_8"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/amount_due_in_each_instalment"
                        android:textColor="@color/text_color_8"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvInterestList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_6"
                    android:overScrollMode="never" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>